# atspi

./: Cargo.toml
atspi/: Cargo.toml
atspi-codegen/: Cargo.toml  generate.sh
atspi-codegen/src/: lib.rs
atspi-types/: Cargo.toml  out.txt
atspi-types/src/: accessible.rs  error.rs  events.wai  impls.rs  lib.rs  plugin.wai  test.wai  traits.rs  types.rs
atspi-types/src/events/: cache.wai  device-event-listener.wai  document.wai  event.wai  events.wai  focus.wai  keyboard.wai  mod.rs  mouse.wai  object.wai  registry.wai  socket.wai  terminal.wai  types.wai  window.wai
atspi/src/: identify.rs
atspi/src/events/: mod.rs
src/: accessible.rs  accessible_ext.rs  accessible_id.rs  collection.rs  convertable.rs  interfaces.rs  state.rs
