[package]
name = "atspi-codegen"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.9"
convert_case = "0.6.0"
itertools = "0.10.5"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.6.0"
zbus = { version = "3.9.0", default-features = false, features = ["xml", "tokio"] }
zvariant = "3.12.0"

[dev-dependencies]
env_logger = "0.10.0"
test-log = "0.2.11"
temp-file = "0.1.7"
